--- a/server/package.json
+++ b/server/package.json
@@ -5,24 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server2.js"
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.18.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.3",
     "graphql": "^16.6.0",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.14",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
-    "passport": "^0.5.3",
-    "passport-google-oauth2": "^0.2.0",
+    "path": "^0.12.7",
     "uuidv4": "^6.2.13"
   }
 }
